<resources>
    <string name="app_name">DragonBallApp</string>
    <string name="titulo">Dragon Ball Fight</string>
    <string name="fighter_advisory">You are going to fight...</string>
    <string name="choose_fighter">Choose your fighter:</string>
    <string name="botonText">FIGHT!</string>
    <string name="powerText">Final Power:</string>
    <string name="placeholder">Placeholder</string>
    <string name="versus">VS</string>
    <string name="victory">Victory! You are a great fighter</string>
    <string name="defeat">Defeat... You need more training</string>
    <string name="draw">Draw. It was a good fight!</string>
    <string name="min_power">Minimum Power:</string>
    <string name="max_power">Maximum Power:</string>
    <string name="toast_info">Power difference:</string>
</resources>